// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressLabel renders an address correctly 1`] = `
<Text>
  moYihV4R...Hnvxfesx
</Text>
`;

exports[`AddressLabel renders an empty address correctly 1`] = `
<Text>
  
</Text>
`;
